a little admin operations done

--- a/public/asset/css/color/blue-grey.css
+++ b/public/asset/css/color/blue-grey.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");
+/*@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");*/
 /*!
  * bootswatch v3.3.7
  * Homepage: http://bootswatch.com
@@ -4639,7 +4639,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #0c84e4;
+  border-color: #263238;
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
